# YouClaw

./: .env.example  .gitignore  BACKGROUND_SERVICE.md  DOCKER_GUIDE.md  Dockerfile  LOCAL_TESTING.md  MANIFEST.in  README.md  deploy.sh  docker-compose.yml  install.sh  network_fix.sh  pyproject.toml  recover.sh  requirements.txt  search_debug.html  youclaw
src/youclaw/: __init__.py  bot.py  cli.py  commands.py  config.py  core_skills.py  dashboard.py  discord_handler.py  env_manager.py  main.py  memory_manager.py  ollama_client.py  personality_manager.py  scheduler_manager.py  search_client.py  skills_manager.py  telegram_handler.py  vector_manager.py
